# clover

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
coda_reid/: get_global_3d_bbox.py  pyproject.toml  visualize_trajectories.py
coda_reid/utils/: geometry.py
configs/: eval.yaml  train.yaml
configs/dataset/: coda_class.yaml  coda_random.yaml  coda_region.yaml  coda_sequence.yaml  scannet.yaml
configs/experiment/coda/: clover_coda_class.yaml  clover_coda_random.yaml  clover_coda_region.yaml  clover_coda_sequence.yaml  ffa_coda_class.yaml  ffa_coda_region.yaml  ffa_coda_sequence.yaml  reobj_coda_class.yaml  reobj_coda_region.yaml  reobj_coda_sequence.yaml  wdisi_coda_class.yaml  wdisi_coda_region.yaml  wdisi_coda_sequence.yaml
configs/experiment/coda_class/: clover.yaml  ffa.yaml  reobj.yaml  wdisi.yaml
configs/experiment/coda_random/: clover.yaml
configs/experiment/scannet/: ffa.yaml  (+8 more)
configs/hydra/: default.yaml
configs/model/: clover.yaml  ffa.yaml  reobj.yaml  wdisi.yaml
configs/paths/: default.yaml
scannet_utils/: generate_txt.py  get_instance_examples.py  get_stats_scannet.py  preprocess_scannet.sh  preprocess_scene.py
src/: eval.py  train.py
src/datasets/: __init__.py  coda.py  scannet.py
src/losses/: __init__.py  supcon.py  supcon_loss.py  triplet_loss.py
src/models/: __init__.py  clover.py  clover_old.py  ffa.py  reobj.py  wdisi.py
src/transforms/: __init__.py  common.py  transform_clover.py  transform_ffa.py  transform_reobj.py
src/utils/: env_variances.py  img_transform.py  logging.py  metric.py  misc.py
(+26 files in other folders)
