[project]
name = "CLOVER"
version = "0.1.0"
description = "CLOVER: Context-aware Long-term Object Viewpoint- and Environment- Invariant Representation Learning"
readme = "README.md"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]